# IPL-Web-Scrape

./: .pre-commit-config.yaml  C:\temp\perf_data.pkl  IPL_WebScrape.db  Makefile  extract.py  extract_links.py  extract_scores.py  load.py  mypy.ini  pyproject.toml  transform.py
dags/: ipl_web_scrape.py
data/: batting_scores.csv  cleaned_batting_scores.csv  grouped_batting_scores.csv
ipl_web_scrape/: base_page.py  driver.py  extract_actions.py  load_actions.py  pickle_actions.py  transform_actions.py
tests/: test_extract_actions.py  test_transform_actions.py
